Amend deprecation warning